--- a/index.html
+++ b/index.html
@@ -295,13 +295,13 @@ For more information on Twitter Posters I recommend <a href="https://www.youtube
 	<div class="w3-row-padding" style="margin:0 -16px">
 		<div class="w3-half">
 			<img src="/images/gallery/TheNat_art.jpg" style="width:90%">
-			<img src="/images/gallery/DeepArgo_ErikJepsenUCSD_resize.jpg" style="width:90%" title="Image credit: Erik Jepsen/UC San Diego">
-			<img src="/images/gallery/sioc218.jpeg" style="width:90%">	
+			<img src="/images/gallery/Tangaroa_SteveDiggs_resize.jpeg" style="width:90%">	
+			<img src="/images/gallery/fulbright.jpg" style="width:90%" title="Image credit: Fulbright New Zealand">
 		</div>
 		<div class="w3-half">
+			<img src="/images/gallery/DeepArgo_ErikJepsenUCSD_resize.jpg" style="width:90%" title="Image credit: Erik Jepsen/UC San Diego">
 			<img src="/images/gallery/OSM2020_cropped.jpg" style="width:90%">
 			<img src="/images/gallery/government_house.jpg" style="width:90%" title="Image credit: McGuinness Institute">
-			<img src="/images/gallery/fulbright.jpg" style="width:90%" title="Image credit: Fulbright New Zealand">
 		</div>
 	</div>
 
