why is photo not working

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ For more information on Twitter Posters I recommend <a href="https://www.youtube
 		<div class="w3-half">
 			<img src="/images/gallery/TheNat_art.jpg" style="width:90%">
 			
-			<img src="/images/gallery/Tangaroa_SteveDiggs_resize.jpeg" style="width:10%">	
+			<img src="/images/gallery/test.jpeg" style="width:90%">	
 			
 			<img src="/images/gallery/fulbright.jpg" style="width:90%" title="Image credit: Fulbright New Zealand">
 		</div>
