--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 
 <h3>Other</h3>
 <p> 
-<b>[Article]</b> Exploring ocean currents 20,000 feet under the sea. (2023). <i>Scripps Institution of Oceanography Dispatches</i>. <a href="https://scripps.ucsd.edu/news/exploring-ocean-currents-20000-feet-under-sea">https://scripps.ucsd.edu/news/exploring-ocean-currents-20000-feet-under-sea</a>    
+<b>[Article]</b> Exploring ocean currents 20,000 feet under the sea. (2023). <i>Scripps Institution of Oceanography Dispatches</i>. <a href="https://scripps.ucsd.edu/news/exploring-ocean-currents-20000-feet-under-sea">https://scripps.ucsd.edu/news/exploring-ocean-currents-20000-feet-under-sea</a> <a href="articles/dispatches_June2023.pdf">[pdf]</a>     
 </p>
 <p> 
 <b>[Art Piece]</b> A non-quiescent ocean. (2022). <i>UC San Diego Art of Science 2022</i>. <a href="https://doi.org/10.6075/J0N29X4D">DOI: 10.6075/J0N29X4D</a> <span style="color: #FFD700">*Judges Honourable Mention*</span>    
