--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@ For more information on Twitter Posters I recommend <a href="https://www.youtube
 			<img src="/images/gallery/TheNat_art.jpg" style="width:90%">
 			<img src="/images/gallery/DeepArgo_ErikJepsenUCSD_resize.jpg" style="width:90%" title="Image credit: Erik Jepsen/UC San Diego">
 			<img src="/images/gallery/OSM2020_cropped.jpg" style="width:90%">
+			<img src="/images/gallery/geo_cvd2.jpg" style="width:90%">
 		</div>
 		<div class="w3-half">
 			<img src="/images/gallery/government_house.jpg" style="width:90%" title="Image credit: McGuinness Institute">
