--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ For more information on Twitter Posters I recommend <a href="https://www.youtube
 			<img src="/images/gallery/TheNat_art.jpg" style="width:90%">
 			<img src="/images/gallery/geo_cvd_cropped.jpg" style="width:90%">
 			<img src="/images/gallery/DeepArgo_ErikJepsenUCSD_resize.jpg" style="width:90%" title="Image credit: Erik Jepsen/UC San Diego">
-			<img src="/images/gallery/COP28_cropped.jpg" style="width:90%">
+			<img src="/images/gallery/COP28_cropped.jpeg" style="width:90%">
 		</div>
 		<div class="w3-half">
 			<img src="/images/gallery/government_house.jpg" style="width:90%" title="Image credit: McGuinness Institute">
