--- a/index.html
+++ b/index.html
@@ -305,17 +305,21 @@ For more information on Twitter Posters I recommend <a href="https://www.youtube
 <h2>Academic Gallery</h2>
 <hr style="width:200px" class="w3-opacity">
 	<div class="w3-row-padding" style="margin:0 -16px">
-		<div class="w3-half">
+		<div class="w3-quarter">
+			<img src="/images/gallery/COP28_cropped.jpeg" style="width:90%">
+			<img src="/images/gallery/DeepArgo_ErikJepsenUCSD_resize.jpg" style="width:90%" title="Image credit: Erik Jepsen/UC San Diego">
+		</div>
+		<div class="w3-quarter">
 			<img src="/images/gallery/TheNat_art.jpg" style="width:90%">
 			<img src="/images/gallery/geo_cvd_cropped.jpg" style="width:90%">
-			<img src="/images/gallery/DeepArgo_ErikJepsenUCSD_resize.jpg" style="width:90%" title="Image credit: Erik Jepsen/UC San Diego">
-			<img src="/images/gallery/COP28_cropped.jpeg" style="width:90%">
 		</div>
-		<div class="w3-half">
-			<img src="/images/gallery/government_house.jpg" style="width:90%" title="Image credit: McGuinness Institute">
-			<img src="/images/gallery/OSM2020_cropped.jpg" style="width:90%">
+		<div class="w3-quarter">
 			<img src="/images/gallery/fulbright.jpg" style="width:90%" title="Image credit: Fulbright New Zealand">
 			<img src="/images/gallery/Tangaroa.jpg" style="width:90%">
+		</div>
+		<div class="w3-quarter">
+			<img src="/images/gallery/government_house.jpg" style="width:90%" title="Image credit: McGuinness Institute">
+			<img src="/images/gallery/OSM2020_cropped.jpg" style="width:90%">
 		</div>
 	</div>
 
