--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ img.head-image { width: 100%;max-width: 600px; }
 <!-- Small screen dropdown navbar (hidden on medium and large screens) -->
 <div class="w3-top">
 	<div class="w3-bar w3-black w3-card">
-		<a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-left w3-xlarge" href="javascript:void(0)" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+		<a class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-left w3-xlarge" href="javascript:void(0)" onclick="myFunction()"><i class="fa fa-bars"></i></a>
 		
 		<a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ&hl=en" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="material-icons w3-xlarge">school</i></a>
 		<a href="https://github.com/mlchandler" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right w3-large" ><i class="fa fa-github"></i></a>
@@ -178,6 +178,9 @@ Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zeal
 </p>
 
 <h3>Talks</h3>
+<p> 
+<b>[Panelist]</b> Observing the changing global ocean: heating, salinity changes, carbonisation, acidification, deoxygenation, and greening. (2023). <i>COP28.</i> <a href="https://www.youtube.com/live/lQz0LbFT97I">[youtube]</a>
+</p>
 <p> 
 20,000 feet under the sea: Variability in the Deep Western Boundary Current of the Southwest Pacific Basin from Deep Argo data. (2022). <i>7th Argo Science Workshop.</i>
 </p>
