--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zeal
 
 <h3>Talks</h3>
 <p> 
-<b>[Panelist]</b> Observing the changing global ocean: heating, salinity changes, carbonisation, acidification, deoxygenation, and greening. (2023). <i>COP28.</i> <a href="https://www.youtube.com/live/lQz0LbFT97I">[youtube]</a>
+<b>[Panelist]</b> Observing the changing global ocean: heating, carbonisation, acidification, deoxygenation, and greening. (2023). <i>COP28.</i> <a href="https://www.youtube.com/live/lQz0LbFT97I">[youtube]</a>
 </p>
 <p> 
 20,000 feet under the sea: Variability in the Deep Western Boundary Current of the Southwest Pacific Basin from Deep Argo data. (2022). <i>7th Argo Science Workshop.</i>
