--- a/index.html
+++ b/index.html
@@ -228,6 +228,9 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 
 <h3>Other</h3>
 <p> 
+<b>[Article]</b> Everything Everywhere All At Once At COP28. (2024). <i>Scripps Institution of Oceanography</i>. <a href="https://scripps.ucsd.edu/news/everything-everywhere-all-once-cop28">https://scripps.ucsd.edu/news/everything-everywhere-all-once-cop28</a> <a href="articles/dispatches_January2024.pdf">[pdf]</a>     
+</p>
+<p> 
 <b>[Interview]</b> UC San Diego, Scripps Oceanography sends delegation to COP28, the UN Climate Conference. (28 November 2023). <i>KPBS</i>. <a href="https://youtu.be/dzZYswfAMJs">https://youtu.be/dzZYswfAMJs</a>     
 </p>
 <p> 
