--- a/index.html
+++ b/index.html
@@ -179,16 +179,19 @@ Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zeal
 
 <h3>Talks</h3>
 <p> 
+Spiralling into the abyss: mixing and seasonality in the Kermadec Trench deep western boundary current from Deep Argo observations. (2024). <i>Ocean Sciences Meeting 2024.</i>
+</p>
+<p> 
 <b>[Panelist]</b> Observing the changing global ocean: heating, carbonisation, acidification, deoxygenation, and greening. (2023). <i>COP28.</i> <a href="https://www.youtube.com/live/lQz0LbFT97I">[youtube]</a>
 </p>
 <p> 
-20,000 feet under the sea: Variability in the Deep Western Boundary Current of the Southwest Pacific Basin from Deep Argo data. (2022). <i>7th Argo Science Workshop.</i>
+20,000 feet under the sea: variability in the Deep Western Boundary Current of the Southwest Pacific Basin from Deep Argo data. (2022). <i>7th Argo Science Workshop.</i>
 </p>
 <p> 
-20,000 feet under the sea: Using Deep Argo to study the Deep Western Boundary Current of the Southwest Pacific Basin. (2022). <i>Scripps Student Symposium 2022.</i>
+20,000 feet under the sea: using Deep Argo to study the Deep Western Boundary Current of the Southwest Pacific Basin. (2022). <i>Scripps Student Symposium 2022.</i>
 </p>
 <p> 
-20,000 feet under the sea: Using Deep Argo to study the Deep Western Boundary Current of the Southwest Pacific Basin. (2022). <i>New Zealand Physical Oceanography Workshop 2022.</i>
+20,000 feet under the sea: using Deep Argo to study the Deep Western Boundary Current of the Southwest Pacific Basin. (2022). <i>New Zealand Physical Oceanography Workshop 2022.</i>
 </p>
 <p>
 The arteries and veins of our ocean. (2022). <i>UC San Diego Grad Slam 2022.</i> <span style="color: #FFD700">*Finalist*</span> <a href="https://youtu.be/Ypyz2wVxun4">[youtube]</a>
