--- a/index.html
+++ b/index.html
@@ -217,6 +217,9 @@ Measuring the subtropical western boundary currents of the Indo-Pacific. (2020).
 
 <h3>Posters</h3>
 <p> 
+Seasonal heaving within the Kermadec Trench deep western boundary current predominantly driven by local Ekman pumping seasonal anomalies. (2024). <i>Pathways Connecting Climate Changes to the Deep Ocean Workshop.</i> <a href="posters/Chandler_pathways2024.pdf">[pdf]</a> <a href="https://www.youtube.com/watch?v=DY4_ruIwaPQ">[youtube]</a>
+</p>
+<p> 
 Transport trends and seasonality from observations in the Kuroshio, Agulhas Current, and East Australian Current. (2023). <i>International Workshop on Western Boundary Current-Subtropical Continental Shelf Interactions.</i> <a href="posters/Chandler_WBC-STCS2023.pdf">[pdf]</a> <a href="https://www.youtube.com/watch?v=d9r1FzRGSqo">[youtube]</a> 
 </p>
 <p> 
