--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@ Measuring the subtropical western boundary currents of the Indo-Pacific. (2020).
 
 <h3>Posters</h3>
 <p> 
-Seasonal heaving within the Kermadec Trench deep western boundary current predominantly driven by local Ekman pumping seasonal anomalies. (2024). <i>Pathways Connecting Climate Changes to the Deep Ocean Workshop.</i> <a href="posters/Chandler_pathways2024.pdf">[pdf]</a> <a href="https://www.youtube.com/watch?v=DY4_ruIwaPQ">[youtube]</a>
+Seasonal heaving within the Kermadec Trench deep western boundary current predominantly driven by local Ekman pumping seasonal anomalies. (2024). <i>Pathways Connecting Climate Changes to the Deep Ocean Workshop.</i> <a href="posters/Chandler_pathways2024.pdf">[pdf]</a>
 </p>
 <p> 
-Transport trends and seasonality from observations in the Kuroshio, Agulhas Current, and East Australian Current. (2023). <i>International Workshop on Western Boundary Current-Subtropical Continental Shelf Interactions.</i> <a href="posters/Chandler_WBC-STCS2023.pdf">[pdf]</a> <a href="https://www.youtube.com/watch?v=d9r1FzRGSqo">[youtube]</a> 
+Transport trends and seasonality from observations in the Kuroshio, Agulhas Current, and East Australian Current. (2023). <i>International Workshop on Western Boundary Current-Subtropical Continental Shelf Interactions.</i> <a href="posters/Chandler_WBC-STCS2023.pdf">[pdf]</a>
 </p>
 <p> 
 A multi-platform approach to examining variability in the Kuroshio off the coast of Japan. (2021). <i>Graduate Climate Conference 2021.</i> 
@@ -262,8 +262,8 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 <h2>Presentation Recordings</h2>
 <hr style="width:200px" class="w3-opacity">
 
-<h5>Interview with KPBS (28 November 2023)</h5>
-<iframe height="300" src="https://www.youtube-nocookie.com/embed/dzZYswfAMJs?rel=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%"></iframe>
+<h5>Seasonal heaving within the Kermadec Trench deep western boundary current predominantly driven by local Ekman pumping seasonal anomalies (2024)</h5>
+<iframe height="300" src="https://www.youtube-nocookie.com/embed/DY4_ruIwaPQ?rel=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%"></iframe>
 
 <h5>Transport trends and seasonality from observations in the Kuroshio, Agulhas Current, and East Australian Current (2023)</h5>
 <iframe height="300" src="https://www.youtube-nocookie.com/embed/d9r1FzRGSqo?rel=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%"></iframe>
