--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@ Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zeal
 
 <h3>Talks</h3>
 <p> 
+Deep Argo and Me: 6,000-m under the sea and 10,000-km around the world. (2024). <i>NOAA CIMEAS Science Review.</i>
+</p>
+<p> 
 Spiralling into the abyss: mixing and seasonality in the Kermadec Trench deep western boundary current from Deep Argo observations. (2024). <i>Ocean Sciences Meeting 2024.</i>
 </p>
 <p> 
