--- a/index.html
+++ b/index.html
@@ -220,6 +220,9 @@ Measuring the subtropical western boundary currents of the Indo-Pacific. (2020).
 
 <h3>Posters</h3>
 <p> 
+Seasonal heaving within the Kermadec Trench deep western boundary current predominantly driven by local Ekman pumping seasonal anomalies. (2024). <i>SIO Annual Fellowship Luncheon 2024.</i>
+</p>
+<p> 
 Seasonal heaving within the Kermadec Trench deep western boundary current predominantly driven by local Ekman pumping seasonal anomalies. (2024). <i>Pathways Connecting Climate Changes to the Deep Ocean Workshop.</i> <a href="posters/Chandler_pathways2024.pdf">[pdf]</a>
 </p>
 <p> 
