--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@ Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zeal
 
 <h3>Talks</h3>
 <p> 
+(marine) heatwaves been faking me out: Observing subsurface marine heatwaves in the Kuroshio and Kuroshio Extension. (2024). <i>Scripps Student Symposium 2024.</i>
+</p>
+<p> 
 In the trenches: Deep Argo observations of the Southwest Pacific Basin Deep Western Boundary Current. (2024). <i>New Zealand Physical Oceanography Workshop 2024.</i>
 </p>
 <p> 
