--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ Spiralling into the abyss: mixing and seasonality in the Kermadec Trench deep we
 <b>[Panelist]</b> Observing the changing global ocean: heating, carbonisation, acidification, deoxygenation, and greening. (2023). <i>COP28.</i> <a href="https://www.youtube.com/live/lQz0LbFT97I">[youtube]</a>
 </p>
 <p> 
-20,000 feet under the sea: variability in the Deep Western Boundary Current of the Southwest Pacific Basin from Deep Argo data. (2022). <i>7th Argo Science Workshop.</i>
+Variability in the Deep Western Boundary Current of the Southwest Pacific Basin from Deep Argo data. (2022). <i>7th Argo Science Workshop.</i>
 </p>
 <p> 
 20,000 feet under the sea: using Deep Argo to study the Deep Western Boundary Current of the Southwest Pacific Basin. (2022). <i>Scripps Student Symposium 2022.</i>
