--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ img.head-image { width: 100%;max-width: 600px; }
 
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
-	<img src="/images/MC_newheadshot.jpg" style="width:100%">
+	<img src="/images/MC_newheadshot.JPG" style="width:100%">
 
 	<a href="#" class="w3-bar-item w3-button w3-padding-small w3-hover-black">
 	<i class="fa fa-home w3-xlarge"></i>
