--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@ Ocean circulation; Boundary currents; Western boundary currents; Deep western bo
 
 <h3>Publications <a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ">(Google Scholar)</a></h3>
 <p>
+Chandler M, Zilberman NV, Sprintall J. (2024). The Deep Western Boundary Current of the Southwest Pacific Basin: insights from Deep Argo. <i>Journal of Geophysical Research: Oceans.</i> <a href="https://doi.org/10.1029/2024JC021098">DOI: 10.1029/2024JC021098</a> <a href="papers/Chandler_et_al_2024.pdf">[pdf]</a> 
+</p>
+<p>
 Chandler M, Zilberman NV, Sprintall J. (2022). Seasonal to decadal western boundary current variability from sustained ocean observations. <i>Geophysical Research Letters.</i> <a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2022GL097834">DOI: 10.1029/2022GL097834</a> <a href="papers/Chandler_et_al_2022.pdf">[pdf]</a> 
 </p>
 <p>
