DWBC twitter poster

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ Twitter posters present a series of simple slides and are a relatively low effor
 	<div class="w3-row-padding w3-hide-small" style="margin:0 -16px">
 		<div class="w3-half">
 			<img src="/tposters/FC_2021.gif" style="width:100%">
-			<img src="/tposters/placeholder.gif" style="width:100%">
+			<img src="/tposters/DWBC_2024.gif" style="width:100%">
 		</div>
 		<div class="w3-half">
 			<img src="/tposters/WBC_2022.gif" style="width:100%">
