--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@ Twitter posters present a series of simple slides and are a relatively low effor
 <ul>
   <li><a href="https://twitter.com/nz_mitch/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
   <li><a href="https://twitter.com/nz_mitch/status/1539312070092390403">WBC sustained observations (Chandler et al. 2022)</a></li>
+  <li><a href="https://x.com/nz_mitch/status/1847661518676251051">Southwest Pacific Basin DWBC (Chandler et al. 2024)</a></li>
 </ul>
 </p>
 
