--- a/index.html
+++ b/index.html
@@ -182,10 +182,7 @@ Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zeal
 
 <h3>Talks</h3>
 <p> 
-Examining the Best Western Boundary Currents in the upper and deep ocean using globally available observations. (2024). <i>Physical Oceanography Dissertation Symposium XIII.</i>
-</p>
-<p> 
-Examining the <i>Best Western</i> Boundary Currents in the upper and deep ocean using globally available observations. (2024). <i>Physical Oceanography Dissertation Symposium XIII.</i>
+Examining the Best Western boundary currents in the upper and deep ocean using globally available observations. (2024). <i>Physical Oceanography Dissertation Symposium XIII.</i>
 </p>
 <p> 
 (marine) heatwaves been faking me out: Observing subsurface marine heatwaves in the Kuroshio and Kuroshio Extension. (2024). <i>Scripps Student Symposium 2024.</i>
