--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@ Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zeal
 
 <h3>Talks</h3>
 <p> 
+<b>[Panelist]</b> Hot H<sub>2</sub>O: global ocean warming and its implications. (2024). <i>COP29.</i>
+</p>
+<p> 
 Examining the Best Western boundary currents in the upper and deep ocean using globally available observations. (2024). <i>Physical Oceanography Dissertation Symposium XIII.</i>
 </p>
 <p> 
