--- a/index.html
+++ b/index.html
@@ -254,6 +254,8 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 </p>
 
 <h3>Other</h3>
+<b>[Interview]</b> Scripps Student Spotlight. (November 2024). <i>Scripps Institution of Oceanography</i>. <a href="https://www.instagram.com/p/DCdlD3uxzaP/">https://www.instagram.com/p/DCdlD3uxzaP/</a>     
+</p>
 <p> 
 <b>[Article]</b> Everything Everywhere All At Once At COP28. (2024). <i>Scripps Institution of Oceanography</i>. <a href="https://scripps.ucsd.edu/news/everything-everywhere-all-once-cop28">https://scripps.ucsd.edu/news/everything-everywhere-all-once-cop28</a> <a href="articles/dispatches_January2024.pdf">[pdf]</a>     
 </p>
