initial commit for resume

--- a/index.html
+++ b/index.html
@@ -335,8 +335,17 @@ For more information on Twitter Posters I recommend <a href="https://www.youtube
 </div>
 
 
+<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="gallery">
+
+<h2>Resume</h2>
+<p> 
+<a href="resume/Chandler_resume-2024.11.23.pdf">Updated 23-November-2024</a>
+</p>
+
+</div>
 
 <!-- Academic Gallery -->
+<!--
 <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="gallery">
 
 <h2>Academic Gallery</h2>
@@ -359,7 +368,7 @@ For more information on Twitter Posters I recommend <a href="https://www.youtube
 	</div>
 
 </div>
-
+-->
 
 
 <!-- Footer -->
