--- a/index.html
+++ b/index.html
@@ -63,9 +63,16 @@ img.head-image { width: 100%;max-width: 600px; }
 	<p>TWITTER POSTERS</p>
 	</a>
 	
+	<!--
 	<a href="#gallery" class="w3-bar-item w3-button w3-padding-small w3-hover-black">
 	<i class="fa fa-photo w3-xlarge"></i>
 	<p>ACADEMIC GALLERY</p>
+	</a>
+	-->
+	
+	<a href="#resume" class="w3-bar-item w3-button w3-padding-small w3-hover-black">
+	<i class="fa fa-file-text w3-xlarge"></i>
+	<p>RESUME</p>
 	</a>
 </nav>
 
@@ -335,7 +342,7 @@ For more information on Twitter Posters I recommend <a href="https://www.youtube
 </div>
 
 
-<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="gallery">
+<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="resume">
 
 <h2>Resume</h2>
 <p> 
