--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ img.head-image { width: 100%;max-width: 600px; }
 	-->
 	
 	<a href="#resume" class="w3-bar-item w3-button w3-padding-small w3-hover-black">
-	<i class="fa fa-file-text w3-xlarge"></i>
+	<i class="fa fa-file-pdf-o w3-xlarge"></i>
 	<p>RESUME</p>
 	</a>
 </nav>
@@ -95,7 +95,8 @@ img.head-image { width: 100%;max-width: 600px; }
 			<a href="#publications" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Publications</a>
 			<a href="#recordings" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Recordings</a>
 			<a href="#twitter_posters" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Twitter Posters</a>
-			<a href="#gallery" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Academic Gallery</a>
+			<!-- <a href="#gallery" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Academic Gallery</a> -->
+			<a href="#resume" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Resume</a>
 		</div>
 		
 	</div>
