--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ img.head-image { width: 100%;max-width: 600px; }
 	-->
 	
 	<a href="#resume" class="w3-bar-item w3-button w3-padding-small w3-hover-black">
-	<i class="fa fa-file-pdf-o w3-xlarge"></i>
+	<i class="fa fa-folder-open w3-xlarge"></i>
 	<p>RESUME</p>
 	</a>
 </nav>
