--- a/index.html
+++ b/index.html
@@ -53,14 +53,21 @@ img.head-image { width: 100%;max-width: 600px; }
 	<p>PUBLICATIONS</p>
 	</a>
 	
+	<!--
 	<a href="#recordings" class="w3-bar-item w3-button w3-padding-small w3-hover-black">
 	<i class="fa fa-video-camera w3-xlarge"></i>
 	<p>RECORDINGS</p>
 	</a>
+	-->
 
 	<a href="#twitter_posters" class="w3-bar-item w3-button w3-padding-small w3-hover-black">
 	<i class="fa fa-twitter w3-xlarge"></i>
 	<p>TWITTER POSTERS</p>
+	</a>
+	
+	<a href="#presentations" class="w3-bar-item w3-button w3-padding-small w3-hover-black">
+	<i class="fa fa-twitter w3-xlarge"></i>
+	<p>PRESENTATIONS</p>
 	</a>
 	
 	<!--
@@ -93,8 +100,9 @@ img.head-image { width: 100%;max-width: 600px; }
 			<a href="#about" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">About</a>
 			<a href="#education" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Education</a>
 			<a href="#publications" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Publications</a>
-			<a href="#recordings" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Recordings</a>
+			<!-- <a href="#recordings" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Recordings</a> -->
 			<a href="#twitter_posters" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Twitter Posters</a>
+			<a href="#presentations" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Presentations</a>
 			<!-- <a href="#gallery" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Academic Gallery</a> -->
 			<a href="#resume" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Resume</a>
 		</div>
@@ -187,6 +195,50 @@ Floerl O, Atalah J, Bugnot AB, Chandler M, Dafforn KA, Floerl L, Zaiko A, Major 
 <p>
 Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zealand: mean, variability, and trends. <i>New Zealand Journal of Marine and Freshwater Research.</i> <a href="https://tandfonline.com/doi/10.1080/00288330.2019.1629467">DOI: 10.1080/00288330.2019.1629467</a> <a href="papers/Chandler_et_al_2019.pdf">[pdf]</a>
 </p>
+
+</div>
+
+
+
+<!-- Twitter Posters -->
+<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="twitter_posters">
+
+<h2>Twitter Posters</h2>
+<hr style="width:200px" class="w3-opacity">
+<p>
+Twitter posters present a series of simple slides and are a relatively low effort way to effectively communicate research to a wider audience. My Twitter posters are linked below:
+<ul>
+  <li><a href="https://twitter.com/nz_mitch/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
+  <li><a href="https://twitter.com/nz_mitch/status/1539312070092390403">WBC sustained observations (Chandler et al. 2022)</a></li>
+  <li><a href="https://x.com/nz_mitch/status/1847661518676251051">Southwest Pacific Basin DWBC (Chandler et al. 2024)</a></li>
+</ul>
+</p>
+
+	<!-- Twitter poster tiling -->
+	<div class="w3-row-padding w3-hide-small" style="margin:0 -16px">
+		<div class="w3-half">
+			<img src="/tposters/FC_2021.gif" style="width:100%">
+			<img src="/tposters/DWBC_2024.gif" style="width:100%">
+		</div>
+		<div class="w3-half">
+			<img src="/tposters/WBC_2022.gif" style="width:100%">
+			<img src="/tposters/placeholder.gif" style="width:100%">
+		</div>
+	</div>
+
+<p>
+For more information on Twitter Posters I recommend <a href="https://www.youtube.com/watch?v=fQDL8r3r_d4">this youtube video</a> by Mike Morrison.
+</p>
+
+</div>
+
+
+
+<!-- Publications -->
+<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="presentations">
+
+<h2>Presentations</h2>
+<hr style="width:200px" class="w3-opacity">
 
 <h3>Talks</h3>
 <p> 
@@ -289,6 +341,7 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 
 
 <!-- Presentation Recordings -->
+<!--
 <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="recordings">
 
 <h2>Presentation Recordings</h2>
@@ -307,40 +360,8 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 <iframe height="300" src="https://www.youtube-nocookie.com/embed/6pUlNjiFMSU?rel=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%"></iframe>
 
 </div>
+-->
 
-
-
-<!-- Twitter Posters -->
-<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="twitter_posters">
-
-<h2>Twitter Posters</h2>
-<hr style="width:200px" class="w3-opacity">
-<p>
-Twitter posters present a series of simple slides and are a relatively low effort way to effectively communicate research to a wider audience. My Twitter posters are linked below:
-<ul>
-  <li><a href="https://twitter.com/nz_mitch/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
-  <li><a href="https://twitter.com/nz_mitch/status/1539312070092390403">WBC sustained observations (Chandler et al. 2022)</a></li>
-  <li><a href="https://x.com/nz_mitch/status/1847661518676251051">Southwest Pacific Basin DWBC (Chandler et al. 2024)</a></li>
-</ul>
-</p>
-
-	<!-- Twitter poster tiling -->
-	<div class="w3-row-padding w3-hide-small" style="margin:0 -16px">
-		<div class="w3-half">
-			<img src="/tposters/FC_2021.gif" style="width:100%">
-			<img src="/tposters/DWBC_2024.gif" style="width:100%">
-		</div>
-		<div class="w3-half">
-			<img src="/tposters/WBC_2022.gif" style="width:100%">
-			<img src="/tposters/placeholder.gif" style="width:100%">
-		</div>
-	</div>
-
-<p>
-For more information on Twitter Posters I recommend <a href="https://www.youtube.com/watch?v=fQDL8r3r_d4">this youtube video</a> by Mike Morrison.
-</p>
-
-</div>
 
 
 <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="resume">
