--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ img.head-image { width: 100%;max-width: 600px; }
 	</a>
 	
 	<a href="#presentations" class="w3-bar-item w3-button w3-padding-small w3-hover-black">
-	<i class="fa fa-twitter w3-xlarge"></i>
+	<i class="fa fa-microphone w3-xlarge"></i>
 	<p>PRESENTATIONS</p>
 	</a>
 	
