add COP29 youtube link

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ For more information on Twitter Posters I recommend <a href="https://www.youtube
 
 <h3>Talks</h3>
 <p> 
-<b>[Panelist]</b> Hot H<sub>2</sub>O: global ocean warming and its implications. (2024). <i>COP29.</i>
+<b>[Panelist]</b> Hot H<sub>2</sub>O: global ocean warming and its implications. (2024). <i>COP29.</i> <a href="https://youtu.be/TIDtSDnh3oY?si=u29fVhe5EQ3_uLi2">[youtube]</a>
 </p>
 <p> 
 Examining the Best Western boundary currents in the upper and deep ocean using globally available observations. (2024). <i>Physical Oceanography Dissertation Symposium XIII.</i>
@@ -292,6 +292,7 @@ Progress towards a combined XBT and Argo observing network for estimating upper-
 <p> 
 Measuring the subtropical western boundary currents of the Indo-Pacific. (2020). <i>Graduate Climate Conference 2020.</i>
 </p>
+
 
 <h3>Posters</h3>
 <p> 
