--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ For more information on Twitter Posters I recommend <a href="https://www.youtube
 
 <h3>Talks</h3>
 <p> 
-<b>[Panelist]</b> Hot H<sub>2</sub>O: global ocean warming and its implications. (2024). <i>COP29.</i> <a href="https://youtu.be/TIDtSDnh3oY?si=u29fVhe5EQ3_uLi2">[youtube]</a>
+<b>[Panelist]</b> Hot H<sub>2</sub>O: global ocean warming and its implications. (2024). <i>COP29.</i> <a href="https://youtu.be/TIDtSDnh3oY?si=93b1ziv6fKzp6i-J">[youtube]</a>
 </p>
 <p> 
 Examining the Best Western boundary currents in the upper and deep ocean using globally available observations. (2024). <i>Physical Oceanography Dissertation Symposium XIII.</i>
