--- a/index.html
+++ b/index.html
@@ -149,12 +149,6 @@ My thesis work examines western boundary currents. This focus includes both subt
 <p>
 Originally from New Zealand, I completed my BSc at the University of Otago in 2017 and did a further Honours year at the University of Auckland in 2018. For my BSc(Hons) I used satellite altimetry to examine trends and variability in the surface expression of the Fiordland Current, a poleward-flowing eastern boundary current alongside south-west New Zealand. My advisors for this work were <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> (Auckland) and <a href="https://www.otago.ac.nz/marinescience/people/staff/otago664247.html">Robert Smith</a> (Otago).
 </p>
-
-<h4>Research Interests</h4>
-<p>
-Ocean circulation; Boundary currents; Western boundary currents; Deep western boundary currents; Observational oceanography; Argo; Deep Argo; Remote sensing; Pacific Ocean; Southwest Pacific oceanography
-</p>
-
 </div>
 
 
@@ -166,9 +160,9 @@ Ocean circulation; Boundary currents; Western boundary currents; Deep western bo
 <hr style="width:200px" class="w3-opacity">
 <p>	
 <ul>
-  <li>Graduate Student, Scripps Institution of Oceanography, 2019-current</li>
-  <li>BSc(Hons, First Class), University of Auckland, 2018</li>
-  <li>BSc, University of Otago, 2015-2017</li>
+  <li>PhD Candidate at Scripps Institution of Oceanography at UC San Diego</li>
+  <li>Bachelor of Science with First Class Honours from the University of Auckland</li>
+  <li>Bachlor of Science from the University of Otago</li>
 </ul>
 </p>
 
@@ -182,7 +176,6 @@ Ocean circulation; Boundary currents; Western boundary currents; Deep western bo
 <h2>Publications</h2>
 <hr style="width:200px" class="w3-opacity">
 
-<h3>Publications <a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ">(Google Scholar)</a></h3>
 <p>
 Chandler M, Zilberman NV, Sprintall J. (2024). The Deep Western Boundary Current of the Southwest Pacific Basin: insights from Deep Argo. <i>Journal of Geophysical Research: Oceans.</i> <a href="https://doi.org/10.1029/2024JC021098">DOI: 10.1029/2024JC021098</a> <a href="papers/Chandler_et_al_2024.pdf">[pdf]</a> 
 </p>
@@ -206,7 +199,7 @@ Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zeal
 <h2>Twitter Posters</h2>
 <hr style="width:200px" class="w3-opacity">
 <p>
-Twitter posters present a series of simple slides and are a relatively low effort way to effectively communicate research to a wider audience. My Twitter posters are linked below:
+Twitter posters present a series of simple slides to effectively communicate research to a wider audience. My Twitter posters are linked below:
 <ul>
   <li><a href="https://twitter.com/nz_mitch/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
   <li><a href="https://twitter.com/nz_mitch/status/1539312070092390403">WBC sustained observations (Chandler et al. 2022)</a></li>
