--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ Variability in the Deep Western Boundary Current of the Southwest Pacific Basin 
 20,000 feet under the sea: using Deep Argo to study the Deep Western Boundary Current of the Southwest Pacific Basin. (2022). <i>New Zealand Physical Oceanography Workshop 2022.</i>
 </p>
 <p>
-The arteries and veins of our ocean. (2022). <i>UC San Diego Grad Slam 2022 (Finalist). <a href="https://youtu.be/Ypyz2wVxun4">[youtube]</a>
+The arteries and veins of our ocean. (2022). <i>UC San Diego Grad Slam 2022 (Finalist). <a href="https://youtu.be/Ypyz2wVxun4">[youtube]</a></i>
 </p>
 <p>
 Examining western boundary current variability using a consistent multi-platform approach. (2022). <i>Ocean Sciences Meeting 2022.</i> <a href="https://www.youtube.com/watch?v=6pUlNjiFMSU">[youtube]</a>
@@ -290,6 +290,7 @@ Progress towards a combined XBT and Argo observing network for estimating upper-
 Measuring the subtropical western boundary currents of the Indo-Pacific. (2020). <i>Graduate Climate Conference 2020.</i>
 </p>
 <p>
+
 </p>
 
 <h3>Posters</h3>
@@ -333,7 +334,7 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 <b>[Article]</b> Exploring ocean currents 20,000 feet under the sea. (2023). <i>Scripps Institution of Oceanography Explorations Now</i>. <a href="https://scripps.ucsd.edu/news/exploring-ocean-currents-20000-feet-under-sea">https://scripps.ucsd.edu/news/exploring-ocean-currents-20000-feet-under-sea</a> <a href="articles/dispatches_June2023.pdf">[pdf]</a>     
 </p>
 <p> 
-<b>[Art Piece]</b> A non-quiescent ocean. (2022). <i>UC San Diego Art of Science 2022 &amp; The San Diego Natural History Museum</i>. <a href="https://doi.org/10.6075/J0N29X4D">DOI: 10.6075/J0N29X4D</a> <span style="color: #FFD700">*Judges Honourable Mention*</span>    
+<b>[Art Piece]</b> A non-quiescent ocean. (2022). <i>UC San Diego Art of Science 2022 (Judges Honourable Mention) &amp; The San Diego Natural History Museum</i>. <a href="https://doi.org/10.6075/J0N29X4D">DOI: 10.6075/J0N29X4D</a>    
 </p>
 <p> 
 <b>[Report]</b> Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing systems to produce a basin-scale network for monitoring upper-ocean transport. <i>UC San Diego: Scripps Institution of Oceanography</i>. <a href="https://escholarship.org/uc/item/7pg5m20c">https://escholarship.org/uc/item/7pg5m20c</a> 
