--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ From the sea to the stars: how combining ocean observing systems can help us stu
 Western boundary current research using Argo, HR-XBT, and satellite altimetry. (2021). <i>12th Observation Coordination Group Workshop: Boundary Currents.</i>
 </p>
 <p> 
-The Fiordland Current: mean, variability, trends. (2020). <i>New Zealand Physical Oceanography Workshop 2020.
+The Fiordland Current: mean, variability, trends. (2020). <i>New Zealand Physical Oceanography Workshop 2020.</i>
 </p>
 <p> 
 Progress towards a combined XBT and Argo observing network for estimating upper-ocean transport. (2020). <i>NOAA Invited Seminar.</i>
@@ -290,7 +290,7 @@ Progress towards a combined XBT and Argo observing network for estimating upper-
 Measuring the subtropical western boundary currents of the Indo-Pacific. (2020). <i>Graduate Climate Conference 2020.</i>
 </p>
 <p>
-
+  
 </p>
 
 <h3>Posters</h3>
