--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@ img.head-image { width: 100%;max-width: 600px; }
 <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
 
 <hr style="width:200px" class="w3-opacity">
-<p> 
-I am a PhD candidate in physical oceanography at Scripps Institution of Oceanography, where I am advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a>, and was the recipient of a Fulbright student fellowship.
+<p>
+I am a PhD Candidate in physical oceanography at Scripps Institution of Oceanography at UC San Diego, where I am advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Dr. Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Dr. Janet Sprintall</a>. I have over 5 years of experience conducting independent and collaborative research, data analysis, technical writing, and science communication. I am skilled at gathering, processing, analysing, and visualising large observational and model data sets to tackle complex problems. My strong communication and outreach abilities have enabled me to effectively communicate research insights to specialist, government, stakeholder and public audiences.
 </p>
 
 <p>
-My thesis work examines western boundary currents. This focus includes both subtropical western boundary currents in the upper-ocean and deep western boundary currents in the deep-ocean. Western boundary currents are located on the western side of the major ocean basins and are hugely important for ecosystems and people due to the influence that these currents have on regional weather, climate, ocean temperature, and sea level. To conduct this work I draw on data from a number of different but complementary ocean observing systems as well as reanalysis products.
+My dissertation research is focussed on western boundary currents - large-scale ocean currents found on the western side of ocean basins. These western boundary currents act like the arteries and veins of the climate system, transporting water and heat around the ocean and helping to regulate global temperature. However, western boundary current variability can also have more localised impacts, including on weather, sea level, temperature, and marine ecosystems. To conduct study these important ocean currents I use an assortment of different observational and reanalysis data sets.
 </p>
 
 <p>
-Originally from New Zealand, I completed my BSc at the University of Otago in 2017 and did a further Honours year at the University of Auckland in 2018. For my BSc(Hons) I used satellite altimetry to examine trends and variability in the surface expression of the Fiordland Current, a poleward-flowing eastern boundary current alongside south-west New Zealand. My advisors for this work were <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> (Auckland) and <a href="https://www.otago.ac.nz/marinescience/people/staff/otago664247.html">Robert Smith</a> (Otago).
+Previous research activities include my BSc(Hons) dissertation. Here, I used satellite altimetry to examine trends and variability in the surface expression of the Fiordland Current along south-west New Zealand. This work was advised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Dr. Melissa Bowen</a> (Auckland) and <a href="https://www.otago.ac.nz/marinescience/people/staff/otago664247.html">Dr. Robert Smith</a> (Otago).
 </p>
 </div>
 
@@ -310,6 +310,7 @@ A multi-platform approach to examining variability in the Kuroshio off the coast
 <p> 
 Towards a basin-scale observing network for monitoring upper-ocean mass and temperature variability. (2020). <i>Ocean Sciences Meeting 2020.</i> <a href="posters/Chandler_OSM2020.pdf">[pdf]</a>
 </p>
+<br>
 
 <h3>Other</h3>
 <!-- 
