--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@ img.head-image { width: 100%;max-width: 600px; }
 
 <hr style="width:200px" class="w3-opacity">
 <p>
-I am a PhD Candidate in physical oceanography at Scripps Institution of Oceanography at UC San Diego, where I am advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Dr. Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Dr. Janet Sprintall</a>. I have over 5 years of experience conducting independent and collaborative research, data analysis, technical writing, and science communication. I am skilled at gathering, processing, analysing, and visualising large observational and model data sets to tackle complex problems. My strong communication and outreach abilities have enabled me to effectively communicate research insights to specialist, government, stakeholder and public audiences.
+I am a PhD Candidate in physical oceanography at Scripps Institution of Oceanography at UC San Diego, where I am advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Dr. Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Dr. Janet Sprintall</a>. I have over 5 years of experience conducting independent and collaborative research, data analysis and visualisation, and technical writing. My strong science communication and outreach abilities have enabled me to effectively communicate research findings to specialist, government, and public audiences.
 </p>
 
 <p>
-My dissertation research is focussed on western boundary currents - large-scale ocean currents found on the western side of ocean basins. These western boundary currents act like the arteries and veins of the climate system, transporting water and heat around the ocean and helping to regulate global temperature. However, western boundary current variability can also have more localised impacts, including on weather, sea level, temperature, and marine ecosystems. To conduct study these important ocean currents I use an assortment of different observational and reanalysis data sets.
+My dissertation research is on western boundary currents -- large-scale ocean currents on the western side of ocean basins. These western boundary currents act like the arteries and veins of the climate system, transporting large amounts of water and heat around the ocean and helping to regulate global temperature. Western boundary current variability also has more localised impacts, including on weather, sea level, temperature, and marine ecosystems. To study these important ocean currents I use an assortment of different observational and reanalysis data sets.
 </p>
 
 <p>
-Previous research activities include my BSc(Hons) dissertation. Here, I used satellite altimetry to examine trends and variability in the surface expression of the Fiordland Current along south-west New Zealand. This work was advised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Dr. Melissa Bowen</a> (Auckland) and <a href="https://www.otago.ac.nz/marinescience/people/staff/otago664247.html">Dr. Robert Smith</a> (Otago).
+Previous research activities include my BSc(Hons). Here, I used satellite altimetry to examine trends and variability in the surface expression of the Fiordland Current along south-west New Zealand. This work was advised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Dr. Melissa Bowen</a> and <a href="https://www.otago.ac.nz/marinescience/people/staff/otago664247.html">Dr. Robert Smith</a>.
 </p>
 </div>
 
@@ -292,21 +292,26 @@ Measuring the subtropical western boundary currents of the Indo-Pacific. (2020).
 <br>
 
 <h3>Posters</h3>
+<h5>2024:</h5>
 <p> 
 Seasonal heaving within the Kermadec Trench deep western boundary current predominantly driven by local Ekman pumping seasonal anomalies. (2024). <i>SIO Annual Fellowship Luncheon 2024.</i>
 </p>
 <p> 
 Seasonal heaving within the Kermadec Trench deep western boundary current predominantly driven by local Ekman pumping seasonal anomalies. (2024). <i>Pathways Connecting Climate Changes to the Deep Ocean Workshop.</i> <a href="posters/Chandler_pathways2024.pdf">[pdf]</a>
 </p>
+<h5>2023:</h5>
 <p> 
 Transport trends and seasonality from observations in the Kuroshio, Agulhas Current, and East Australian Current. (2023). <i>International Workshop on Western Boundary Current-Subtropical Continental Shelf Interactions.</i> <a href="posters/Chandler_WBC-STCS2023.pdf">[pdf]</a>
 </p>
+<h5>2022:</h5>
+<h5>2021:</h5>
 <p> 
 A multi-platform approach to examining variability in the Kuroshio off the coast of Japan. (2021). <i>Graduate Climate Conference 2021.</i> 
 </p>
 <p> 
 A multi-platform approach to examining variability in the Kuroshio off the coast of Japan. (2021). <i>Scripps Student Symposium 2021.</i> <a href="posters/Chandler_S32021.pdf">[pdf]</a> 
 </p>
+<h5>2020:</h5>
 <p> 
 Towards a basin-scale observing network for monitoring upper-ocean mass and temperature variability. (2020). <i>Ocean Sciences Meeting 2020.</i> <a href="posters/Chandler_OSM2020.pdf">[pdf]</a>
 </p>
@@ -336,7 +341,7 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 <b>[Art Piece]</b> A non-quiescent ocean. (2022). <i>UC San Diego Art of Science 2022 (Judges Honourable Mention) &amp; The San Diego Natural History Museum</i>. <a href="https://doi.org/10.6075/J0N29X4D">DOI: 10.6075/J0N29X4D</a>    
 </p>
 <p> 
-<b>[Report]</b> Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing systems to produce a basin-scale network for monitoring upper-ocean transport. <i>UC San Diego: Scripps Institution of Oceanography</i>. <a href="https://escholarship.org/uc/item/7pg5m20c">https://escholarship.org/uc/item/7pg5m20c</a> 
+<b>[Report]</b> Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing systems to produce a basin-scale network for monitoring upper-ocean transport. <i>UC San Diego</i>. <a href="https://escholarship.org/uc/item/7pg5m20c">https://escholarship.org/uc/item/7pg5m20c</a> 
 </p>
 
 </div>
