--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@ For more information on Twitter Posters I recommend <a href="https://www.youtube
 <hr style="width:200px" class="w3-opacity">
 
 <h3>Talks</h3>
+<p><b>2024:</b></p>
 <p> 
 <b>[Panelist]</b> Hot H<sub>2</sub>O: global ocean warming and its implications. (2024). <i>COP29.</i> <a href="https://youtu.be/TIDtSDnh3oY?si=93b1ziv6fKzp6i-J">[youtube]</a>
 </p>
@@ -256,9 +257,11 @@ Deep Argo and Me: 6,000-m under the sea and 10,000-km around the world. (2024). 
 <p> 
 Spiralling into the abyss: mixing and seasonality in the Kermadec Trench deep western boundary current from Deep Argo observations. (2024). <i>Ocean Sciences Meeting 2024.</i>
 </p>
+<p><b>2023:</b></p>
 <p> 
 <b>[Panelist]</b> Observing the changing global ocean: heating, carbonisation, acidification, deoxygenation, and greening. (2023). <i>COP28.</i> <a href="https://www.youtube.com/live/lQz0LbFT97I">[youtube]</a>
 </p>
+<p><b>2022:</b></p>
 <p> 
 Variability in the Deep Western Boundary Current of the Southwest Pacific Basin from Deep Argo data. (2022). <i>7th Argo Science Workshop.</i>
 </p>
@@ -277,9 +280,11 @@ Examining western boundary current variability using a consistent multi-platform
 <p>
 From the sea to the stars: how combining ocean observing systems can help us study ocean currents. (2022). <i>SIO WMIS Student Seminar Series.</i>
 </p>
+<p><b>2021:</b></p>
 <p>
 Western boundary current research using Argo, HR-XBT, and satellite altimetry. (2021). <i>12th Observation Coordination Group Workshop: Boundary Currents.</i>
 </p>
+<p><b>2020:</b></p>
 <p> 
 The Fiordland Current: mean, variability, trends. (2020). <i>New Zealand Physical Oceanography Workshop 2020.</i>
 </p>
@@ -294,26 +299,26 @@ Measuring the subtropical western boundary currents of the Indo-Pacific. (2020).
 <h3>Posters</h3>
 <p><b>2024:</b></p>
 <p> 
-Seasonal heaving within the Kermadec Trench deep western boundary current predominantly driven by local Ekman pumping seasonal anomalies. (2024). <i>SIO Annual Fellowship Luncheon 2024.</i>
+Seasonal heaving within the Kermadec Trench deep western boundary current predominantly driven by local Ekman pumping seasonal anomalies. <i>SIO Annual Fellowship Luncheon 2024.</i>
 </p>
 <p> 
-Seasonal heaving within the Kermadec Trench deep western boundary current predominantly driven by local Ekman pumping seasonal anomalies. (2024). <i>Pathways Connecting Climate Changes to the Deep Ocean Workshop.</i> <a href="posters/Chandler_pathways2024.pdf">[pdf]</a>
+Seasonal heaving within the Kermadec Trench deep western boundary current predominantly driven by local Ekman pumping seasonal anomalies. <i>Pathways Connecting Climate Changes to the Deep Ocean Workshop.</i> <a href="posters/Chandler_pathways2024.pdf">[pdf]</a>
 </p>
 <p><b>2023:</b></p>
 <p> 
-Transport trends and seasonality from observations in the Kuroshio, Agulhas Current, and East Australian Current. (2023). <i>International Workshop on Western Boundary Current-Subtropical Continental Shelf Interactions.</i> <a href="posters/Chandler_WBC-STCS2023.pdf">[pdf]</a>
+Transport trends and seasonality from observations in the Kuroshio, Agulhas Current, and East Australian Current. <i>International Workshop on Western Boundary Current-Subtropical Continental Shelf Interactions.</i> <a href="posters/Chandler_WBC-STCS2023.pdf">[pdf]</a>
 </p>
 <p><b>2022:</b></p>
 <p><b>2021:</b></p>
 <p> 
-A multi-platform approach to examining variability in the Kuroshio off the coast of Japan. (2021). <i>Graduate Climate Conference 2021.</i> 
+A multi-platform approach to examining variability in the Kuroshio off the coast of Japan. <i>Graduate Climate Conference 2021.</i> 
 </p>
 <p> 
-A multi-platform approach to examining variability in the Kuroshio off the coast of Japan. (2021). <i>Scripps Student Symposium 2021.</i> <a href="posters/Chandler_S32021.pdf">[pdf]</a> 
+A multi-platform approach to examining variability in the Kuroshio off the coast of Japan. <i>Scripps Student Symposium 2021.</i> <a href="posters/Chandler_S32021.pdf">[pdf]</a> 
 </p>
 <p><b>2020:</b></p>
 <p> 
-Towards a basin-scale observing network for monitoring upper-ocean mass and temperature variability. (2020). <i>Ocean Sciences Meeting 2020.</i> <a href="posters/Chandler_OSM2020.pdf">[pdf]</a>
+Towards a basin-scale observing network for monitoring upper-ocean mass and temperature variability. <i>Ocean Sciences Meeting 2020.</i> <a href="posters/Chandler_OSM2020.pdf">[pdf]</a>
 </p>
 <br>
 
